# bvm-lang

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
dev/: ROADMAP.md
docs/: API.md  STABILITY.md
docs/release/: v0.2.0.md  v0.2.5.md  v1.0.0.md
examples/: errors.rs  expression.rs  fibonacci.rs
src/: chunk.rs  error.rs  eval.rs  lib.rs  op.rs  vm.rs
tests/: execution.rs  proptests.rs  serde_roundtrip.rs
