# =============================================================================
#  R E P S   ·   bvm-lang
# =============================================================================
[package]
name    = "bvm-lang"
version = "0.2.5"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Bytecode VM and interpreter loop."

# Keywords (5 max)
keywords = ["language", "runtime", "vm", "bytecode"]

# Categories
categories = ["development-tools", "compilers"]

# Links
homepage      = "https://github.com/jamesgober/bvm-lang"
repository    = "https://github.com/jamesgober/bvm-lang"
documentation = "https://docs.rs/bvm-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "bvm_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
std = ["value-lang/std"]
# Serialization support for bytecode (`Op`, `Chunk`) and `Value`.
serde = ["dep:serde", "value-lang/serde"]


# DEPENDENCIES
# #################################
[dependencies]
# Runtime operand type. `Value` is the eight-byte NaN-boxed value every
# instruction reads and writes; the VM speaks the same value as the rest of the
# language-construction family. Pinned to the published 1.x.
value-lang = { version = "1", default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
proptest   = "1"
# Concrete format for the `serde` round-trip tests (bytecode persistence).
serde_json = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
